# storage-hub

./: .adr-dir  .env.example  .envrc  .eslintrc.cjs  .gitignore  .mcp.json  .prettierrc  AGENTS.md  AI_REVIEW_PLAN.md  CLAUDE.md  Cargo.toml  DEBUG_STATUS_REPORT.md  FISHING_INDEXER_EVENTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LEADER_SELECTION_PLAN.md  MULTI_RUNTIME_IMPLEMENTATION_GUIDE.md  PR_DESCRIPTION.md  README.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_PROCESS.md  STREAM4-TASKS.md  STREAM6_COMPLETION_STATUS.md  StorageHub-release0.3.2.md  WIP_CONNECTION_ARCHITECTURE.md  WIP_MOCK_POSTGRES_STATUS.md  backend-architecture.md  backend-implementation-plan.md  backend_config.toml  backend_config_test.toml  biome.json  bsp_config.toml  bun.lockb  config.example.toml  endpoints-comprehensive.md  expanded-lite-mode-plan.md  fisherman_config.toml  implementation-plan.md  (+22 more)
backend/examples/: Cargo.toml  using_mocks.rs
backend/lib/: Cargo.toml  libconstants.rlib
backend/lib/examples/: mock_architecture_demo.rs  postgres_client_usage.rs  rpc_client_usage.rs  test_mock_connection.rs  test_rpc_connections.rs
backend/lib/src/: config.rs  constants.rs  error.rs  lib.rs  log.rs  mock_utils.rs  runtime.rs  serde_utils.rs  test_constants.rs  test_helpers.rs  utils.rs
backend/lib/tests/: enum_integration.rs.wip  mock_architecture_integration.rs  mock_architecture_integration.rs.wip  postgres_with_mock_connection.rs  rpc_client_integration.rs  rpc_connections_test.rs
bsp/: Cargo.toml
bsp/src/: main.rs
client/: Cargo.toml
client/actors-derive/: Cargo.toml  README.md
client/actors-derive/examples/: actor_command_test.rs
client/actors-derive/src/: lib.rs
client/actors-framework/: Cargo.toml
client/actors-framework-macro/: Cargo.toml
client/actors-framework-macro/src/: lib.rs
client/actors-framework/src/: actor.rs  constants.rs  event_bus.rs  forest_write_lock.rs  lib.rs
client/blockchain-service/: Cargo.toml  leader_follower_design.md
client/blockchain-service-db/: Cargo.toml  diesel.toml
client/blockchain-service-db/src/: leadership.rs  lib.rs  models.rs  schema.rs  store.rs
client/blockchain-service/src/: capacity_manager.rs  commands.rs  events.rs  forest_write_lock.rs  forest_write_lock_manager.rs  handler.rs  handler_bsp.rs  handler_msp.rs  lib.rs  lock_manager.rs  migrations.rs  state.rs  transaction.rs  transaction_manager.rs  transaction_pool.rs  transaction_watchers.rs  typed_store.rs  types.rs  utils.rs
client/common/: Cargo.toml
client/common/src/: blockchain_utils.rs  config.rs  consts.rs  crypto.rs  events.rs  lib.rs  task_context.rs  telemetry.rs  telemetry_error.rs  telemetry_integration_test.rs  telemetry_test.rs  traits.rs  trusted_file_transfer.rs  typed_store.rs  types.rs  utils.rs
client/file-manager/: Cargo.toml
client/file-manager/src/: error.rs  in_memory.rs  lib.rs  rocksdb.rs  traits.rs
client/file-transfer-service/: Cargo.toml  build.rs
client/file-transfer-service/src/: commands.rs  events.rs  handler.rs  lib.rs  schema.rs
client/fisherman-service/: Cargo.toml
client/fisherman-service/src/: commands.rs  events.rs  handler.rs  lib.rs  types.rs
client/forest-lock/: Cargo.toml
client/forest-lock/src/: lib.rs
client/forest-manager/: Cargo.toml
client/forest-manager/src/: error.rs  in_memory.rs  lib.rs  prove.rs  rocksdb.rs  test_utils.rs  traits.rs  types.rs  utils.rs
client/indexer-db/: Cargo.toml  README.md
client/indexer-db/src/: lib.rs  schema.rs  types.rs
client/indexer-service/: Cargo.toml  LITE_MODE_EVENTS.md  README.md
client/indexer-service/src/: handler.rs  lib.rs  lite_handlers.rs  telemetry.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: lib.rs
client/rpc/: Cargo.toml
client/rpc/src/: lib.rs
client/src/: bsp_peer_manager.rs  builder.rs  download_state_store.rs  file_download_manager.rs  forest_storage.rs  handler.rs  lib.rs  metrics.rs  msp_internal_file_transer_server.rs  msp_internal_file_transfer_server.rs  telemetry.rs  trusted_file_transfer_server.rs  types.rs
client/src/msp_internal_file_transfer_server/: mod.rs
client/src/tasks/: bsp_charge_fees.rs  bsp_delete_file.rs  bsp_download_file.rs  bsp_move_bucket.rs  bsp_stop_storing.rs  bsp_submit_proof.rs  bsp_upload_file.rs  fisherman_process_batch_deletions.rs  fisherman_process_file_deletion.rs  mock_bsp_volunteer.rs  mock_sp_react_to_event.rs  mod.rs  msp_charge_fees.rs  msp_check_bucket_file_storage.rs  msp_delete_bucket.rs  msp_delete_file.rs  msp_distribute_file.rs  msp_follower_download_file.rs  msp_move_bucket.rs  msp_remove_finalised_files.rs  msp_retry_bucket_move.rs  msp_stop_storing_insolvent_user.rs  msp_upload_file.rs  msp_verify_bucket_forests.rs  sp_slash_provider.rs  user_sends_file.rs
client/src/trusted_file_transfer/: files.rs  follower_downloader.rs  mod.rs  server.rs  utils.rs
client/telemetry/: Cargo.toml
client/telemetry-service/: Cargo.toml  README.md
client/telemetry-service/src/: commands.rs  handler.rs  lib.rs  types.rs
client/telemetry/src/: constants.rs  lib.rs  link.rs  macros.rs  metrics.rs
e2e-test/: Cargo.toml  README.md  polkadot.scale  storage-hub-v15.scale  storage-hub.scale  v14.json  v15.json
e2e-test/src/: lib.rs  main.rs  node.rs  utils.rs
e2e-test/src/tests/: basic.rs  mod.rs  (+1 more)
node/: Cargo.toml  build.rs  timbo.txt
node/src/: chain_spec.rs  cli.rs  command.rs  config.rs  main.rs  provider_requests_protocol.rs  rpc.rs  service.rs  types.rs
pallets/bucket-nfts/: Cargo.toml
pallets/file-system/: Cargo.toml  README.md
pallets/payment-streams/: Cargo.toml  README.md
pallets/proofs-dealer/: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/parachain/: Cargo.toml  build.rs
runtime/solochain-evm/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs  xcm_config.rs
storage-kit/: Cargo.toml
storage-kit/src/: constants.rs  lib.rs  manager.rs  tasks.rs  traits.rs  types.rs
xcm-simulator/: Cargo.toml
xcm-simulator/src/: constants.rs  lib.rs  mock_message_queue.rs  tests.rs
(+1220 files in other folders)
